feat: mobile view formatting + light-mode theme
