# server/src/middleware/__generated__/swagger.json
@@ -48,6 +48,15 @@
 					"biological"
 				]
 			},
+			"ReagentVisibility": {
+				"type": "string",
+				"enum": [
+					"everyone",
+					"region",
+					"institution",
+					"private"
+				]
+			},
 			"Reagent": {
 				"properties": {
 					"user_id": {
@@ -94,6 +103,9 @@
 					},
 					"location": {
 						"type": "string"
+					},
+					"visibility": {
+						"$ref": "#/components/schemas/ReagentVisibility"
 					}
 				},
 				"required": [
@@ -106,7 +118,8 @@
 					"tradingType",
 					"categories",
 					"createdAt",
-					"location"
+					"location",
+					"visibility"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -211,6 +224,9 @@
 					},
 					"location": {
 						"type": "string"
+					},
+					"visibility": {
+						"$ref": "#/components/schemas/ReagentVisibility"
 					}
 				},
 				"type": "object",
@@ -699,7 +715,7 @@
 						}
 					}
 				},
-				"description": "Get all reagents under a user\nUser must be authenticated to access this endpoint",
+				"description": "Get all reagents under a user\r\nUser must be authenticated to access this endpoint",
 				"tags": [
 					"User"
 				],
@@ -724,7 +740,7 @@
 						}
 					}
 				},
-				"description": "Create a reagent by passing in all the required props.\nUser **must** be authenticated to access this endpoint (lab manager / admin) [seller]",
+				"description": "Create a reagent by passing in all the required props.\r\nUser **must** be authenticated to access this endpoint (lab manager / admin) [seller]",
 				"tags": [
 					"User"
 				],
@@ -768,7 +784,7 @@
 						}
 					}
 				},
-				"description": "Get a reagent by using its ID\nUser must be authenticated to access this endpoint",
+				"description": "Get a reagent by using its ID\r\nUser must be authenticated to access this endpoint",
 				"tags": [
 					"User"
 				],
@@ -808,7 +824,7 @@
 						}
 					}
 				},
-				"description": "Delete a reagent by using its ID\nUser **must** be authenticated to access this endpoint",
+				"description": "Delete a reagent by using its ID\r\nUser **must** be authenticated to access this endpoint",
 				"tags": [
 					"User"
 				],
@@ -843,7 +859,7 @@
 						}
 					}
 				},
-				"description": "Update a reagent by its ID.\nUser **must** be authenticated to access this endpoint",
+				"description": "Update a reagent by its ID.\r\nUser **must** be authenticated to access this endpoint",
 				"tags": [
 					"User"
 				],
@@ -895,7 +911,7 @@
 						}
 					}
 				},
-				"description": "\nGet all reagents under another user by their user id\nCan only be done by admin*",
+				"description": "\r\nGet all reagents under another user by their user id\r\nCan only be done by admin*",
 				"tags": [
 					"User"
 				],
@@ -995,7 +1011,7 @@
 						}
 					}
 				},
-				"description": "Get a reagent by its ID.\nCan only be done by lab_admin and admin",
+				"description": "Get a reagent by its ID.\r\nCan only be done by lab_admin and admin",
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -1025,7 +1041,7 @@
 						}
 					}
 				},
-				"description": "Delete a reagent by its ID.\nCan only be done by lab_admin (who owns the reagent) and admin",
+				"description": "Delete a reagent by its ID.\r\nCan only be done by lab_admin (who owns the reagent) and admin",
 				"security": [],
 				"parameters": [
 					{
@@ -1053,7 +1069,7 @@
 						}
 					}
 				},
-				"description": "Update a reagent by its ID.\nCan only be done by lab_admin (who owns the reagent) and admin",
+				"description": "Update a reagent by its ID.\r\nCan only be done by lab_admin (who owns the reagent) and admin",
 				"security": [],
 				"parameters": [
 					{
@@ -1266,7 +1282,11 @@
 				"tags": [
 					"Inbox"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
@@ -1298,7 +1318,11 @@
 				"tags": [
 					"Inbox"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
@@ -1330,7 +1354,11 @@
 				"tags": [
 					"Inbox"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -1361,7 +1389,11 @@
 				"tags": [
 					"Inbox"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
